--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
       <section class="hero">
         <div class="autoContainer">
           <div class="hero__bg">
-            <img src="images/placeholder.png" alt="bg" />
-            <div class="hero__bg-fog" style="opacity: 0.4"></div>
+            <img src="images/proffesionals.jpg" alt="bg" />
+            <div class="hero__bg-fog" style="opacity: 0.8"></div>
           </div>
           <div class="hero__inner">
             <h1>We solve problems of any complexity</h1>
