--- a/index.html
+++ b/index.html
@@ -1014,6 +1014,12 @@
               </div>
             </div>
           </div>
+          <div class="footer__copyright">
+            <p>©️ BHNV. All rights reserved. <span>Design by</span></p>
+            <a href="https://babylonunited.net" target="_blank">
+              <img src="images/babylon-united.png" alt="babylon-united" />
+            </a>
+          </div>
         </div>
       </footer>
       <!-- #footer end -->
