babylon svg logo

--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
           <div class="footer__copyright">
             <p>©️ BHNV. All rights reserved. <span>Design by</span></p>
             <a href="https://babylonunited.net" target="_blank">
-              <img src="images/babylon-united.png" alt="babylon-united" />
+              <img src="images/babylon-united.svg" alt="babylon-united" />
             </a>
           </div>
         </div>
