BHNV Remodeling text

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/main.css" />
     <link rel="icon" href="images/logo-small.png" />
-    <title>Logo | Home</title>
+    <title>BHNV Remodeling | Home</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
@@ -37,7 +37,7 @@
               </div>
             </div>
             <span class="logo">
-              <img src="images/logo-main.png" alt="Logo" />
+              <img src="images/logo-main.png" alt="BHNV Remodeling" />
             </span>
             <button class="burger" id="menuBtn"></button>
           </div>
@@ -1345,7 +1345,7 @@
           <div class="footer__inner">
             <div class="footer__inner-info">
               <div class="logo">
-                <img src="images/logo-main.png" alt="logo" />
+                <img src="images/logo-main.png" alt="BHNV Remodeling" />
               </div>
               <ul class="footer__inner-info-list">
                 <li>
