--- a/index.html
+++ b/index.html
@@ -1395,7 +1395,9 @@
             </div>
           </div>
           <div class="footer__copyright">
-            <p>©️ BHNV. All rights reserved. <span>Design by</span></p>
+            <p>
+              ©️ BHNV Remodeling. All rights reserved. <span>Design by</span>
+            </p>
             <a href="https://babylonunited.net" target="_blank">
               <img src="images/babylon-united.svg" alt="babylon-united" />
             </a>
