--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
       </header>
       <!-- #header end -->
       <!-- #hero -->
+      <section class="anchor" id="home"></section>
       <section class="hero">
         <div class="autoContainer">
           <div class="hero__bg">
@@ -73,8 +74,8 @@
         </div>
       </section>
       <!-- #hero end -->
-
       <!-- #about -->
+      <section class="anchor" id="about-us"></section>
       <section class="about">
         <div class="autoContainer">
           <div class="about__inner">
@@ -135,6 +136,7 @@
       </section>
       <!-- #about end -->
       <!-- #construction -->
+      <section class="anchor" id="construction"></section>
       <section class="construction">
         <div class="autoContainer">
           <div class="construction__inner">
@@ -223,6 +225,7 @@
       </section>
       <!-- #construction end -->
       <!-- #electrical -->
+      <section class="anchor" id="electrical"></section>
       <section class="electrical">
         <div class="autoContainer">
           <div class="electrical__inner">
@@ -318,6 +321,7 @@
       </section>
       <!-- #electrical end -->
       <!-- #charger -->
+      <section class="anchor" id="vehicle-charger"></section>
       <section class="charger">
         <div class="autoContainer">
           <div class="charger__inner">
@@ -438,6 +442,7 @@
       </section>
       <!-- #charger end -->
       <!-- #feedbacks -->
+      <section class="anchor" id="feedbacks"></section>
       <section class="feedbacks">
         <div class="autoContainer">
           <div class="feedbacks__inner">
@@ -620,6 +625,7 @@
         </div>
       </section>
       <!-- #projects -->
+      <section class="anchor" id="our-projects"></section>
       <section class="projects" id="projectsSection">
         <div class="autoContainer">
           <div class="projects__inner">
@@ -1319,6 +1325,7 @@
       </section>
       <!-- #projects end -->
       <!-- #contact -->
+      <section class="anchor" id="contact"></section>
       <section class="contact">
         <div class="autoContainer">
           <div class="contact__inner">
@@ -1360,16 +1367,16 @@
             </div>
             <div class="footer__inner-links">
               <div class="footer__inner-links-column">
-                <h4>services</h4>
-                <a href="#">Construction</a>
-                <a href="#">Electrical</a>
-                <a href="#">Vehicle charger</a>
+                <h4>Services</h4>
+                <a href="#construction">Construction</a>
+                <a href="#electrical">Electrical</a>
+                <a href="#vehicle-charger">Vehicle charger</a>
               </div>
               <div class="footer__inner-links-column">
                 <h4>Company</h4>
-                <a href="#">About us</a>
-                <a href="#">Our projects</a>
-                <a href="#">Reviews</a>
+                <a href="#about-us">About us</a>
+                <a href="#our-projects">Our projects</a>
+                <a href="#feedbacks">Reviews</a>
               </div>
             </div>
             <div class="footer__inner-form">
@@ -1420,6 +1427,7 @@
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="js/swiper.js"></script>
     <script src="js/projects-filter.js"></script>
+    <script src="js/highlight-nav.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
