--- a/index.html
+++ b/index.html
@@ -200,11 +200,12 @@
     <!-- #electrical -->
     <section class="anchor" id="electrical"></section>
     <section class="electrical">
-        <div class="autoContainer">
-          <div class="electrical__inner">
-            <h3>Electrical services</h3>
-            <div class="electrical__inner-row">
-              <div class="electrical__inner-row-wrapper">
+      <div class="autoContainer">
+        <div class="electrical__inner">
+          <h3>Electrical services</h3>
+          <div class="electrical__inner-row swiper" data-swiper="electrical">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
                 <div class="electrical__inner-text">
                   <p>
                     Upgrade your home's electrical system with our expert
@@ -227,61 +228,59 @@
                   <li>Electrical safety inspections</li>
                   <li>Electrical code compliance inspections</li>
                 </ul>
-                <div class="electrical__inner-slider">
-                  <div class="swiper" data-swiper="electrical">
-                    <div class="swiper-wrapper">
-                      <div class="electrical__inner-slider-item swiper-slide">
-                        <div class="ratioImage">
-                          <img src="images/electrical.png" alt="placeholder" />
-                        </div>
-                      </div>
-                      <div class="electrical__inner-slider-item swiper-slide">
-                        <div class="ratioImage">
-                          <img src="images/placeholder.png" alt="placeholder" />
-                        </div>
-                      </div>
-                    </div>
+                <div class="electrical__inner-image ">
+                  <div class="ratioImage">
+                    <img src="images/electrical.png" alt="placeholder" />
                   </div>
-                  <div class="electrical__inner-slider-arrows">
-                    <button class="swiper-arrow swiper-arrow-prev">
-                      <svg
-                        width="59"
-                        height="24"
-                        viewBox="0 0 59 24"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M59 1H3L25 23"
-                          stroke="currentColor"
-                          stroke-width="2"
-                        />
-                      </svg>
-                    </button>
-                    <div class="swiper-dots"></div>
-                    <button class="swiper-arrow swiper-arrow-next">
-                      <svg
-                        width="59"
-                        height="24"
-                        viewBox="0 0 59 24"
-                        fill="none"
-                        xmlns="http://www.w3.org/2000/svg"
-                      >
-                        <path
-                          d="M0 1H56L34 23"
-                          stroke="currentColor"
-                          stroke-width="2"
-                        />
-                      </svg>
-                    </button>
+                </div>
+
+              </div>
+              <div class="swiper-slide">
+                <div class="electrical__inner-text">
+                  <p>
+                    Transform your home into a modern oasis with our expert
+                    electric vehicle charging installation services! At [company
+                    name], we specialize in helping homeowners adapt to the
+                    changing times by providing top-of-the-line EV charging
+                    solutions that are both convenient and eco-friendly. 
+                  </p>
+                </div>
+                <ul class="electrical__inner-list">
+                  <li>Electrical set up and rewiring</li>
+                  <li>Lighting installations, including LED</li>
+                  <li>Electrical panel upgrades and repairs</li>
+                  <li>Electrical outlet and switch installations</li>
+                  <li>Ceiling fan installations and repairs</li>
+                  <li>Smoke detector installations</li>
+                  <li>Carbon monoxide detector installations</li>
+                  <li>Home automation system installations</li>
+              
+                </ul>
+                <div class="electrical__inner-image ">
+                  <div class="ratioImage">
+                    <img src="images/charger.png" alt="placeholder" />
                   </div>
                 </div>
               </div>
             </div>
+            <div class="electrical__inner-slider-arrows">
+              <button class="swiper-arrow swiper-arrow-prev">
+                <svg width="59" height="24" viewBox="0 0 59 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M59 1H3L25 23" stroke="currentColor" stroke-width="2" />
+                </svg>
+              </button>
+              <div class="swiper-dots"></div>
+              <button class="swiper-arrow swiper-arrow-next">
+                <svg width="59" height="24" viewBox="0 0 59 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M0 1H56L34 23" stroke="currentColor" stroke-width="2" />
+                </svg>
+              </button>
+            </div>
           </div>
         </div>
-      </section> 
-  
+      </div>
+    </section>
+
     <!-- #electrical end -->
     <!-- #charger -->
     <section class="anchor" id="vehicle-charger"></section>
