min -heifght 100vh

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                   </div>
                 </div>
                 <div class="swiper-slide">
-                  <div class="electrical__inner-text">
+                 <div class="electrical__inner-text">
                     <p>
                       Transform your home into a modern oasis with our expert
                       electric vehicle charging installation services! At
@@ -352,7 +352,10 @@
                   </ul>
                   <div class="electrical__inner-image">
                     <div class="ratioImage">
-                      <img src="images/charger.png" alt="placeholder" />
+                      <img
+                        src="images/electrical-services.png"
+                        alt="placeholder"
+                      />
                     </div>
                   </div>
                 </div>
